# agentcloud

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  docker-compose.minimal.yml  docker-compose.yml  git_diff.txt  install.sh  package.json  setemptyenv.sh  setup.ts  values.yaml
agent-backend/: .env.example  .flake8  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
agent-backend/kubernetes/dev/: cloudbuild.yaml  configmap.yaml  deployment.yaml  ingress.yaml  service.yaml  ssl.yaml
agent-backend/kubernetes/prod/: cloudbuild.yaml  deployment.yaml  ingress.yaml  ssl.yaml
agent-backend/src/: OAI_CONFIG_LIST_SAMPLE  main.py
agent-backend/src/agents/: ag_base.py  ag_demo.py  ag_demo1.py  agents_list.py  base copy.py  base.py  demo_groupchat_rag.py  llava_demo.py
agent-backend/src/agents/qdrant_retrieval/: __init__.py  qdrant_retrieval_config.json
agent-backend/src/chat/: __init__.py  chat_assistant.py  human_input_tool.py  mongo_db_saver.py
agent-backend/src/chat/agents/: anthropic.py  base.py  base_anthropic_vertex.py  default.py  factory.py  ollama.py  open_ai.py  vertex.py
agent-backend/src/chat/docs/: chat_workflow.md
agent-backend/src/concurrency/: locked_threading.py
agent-backend/src/config/: OAI_CONFIG_LIST.json  base.json  config.py
agent-backend/src/crew/: build_crew.py  build_task_helpers.py  exceptions.py  get_crew_components.py
agent-backend/src/gcp/: cloud_secrets.py
agent-backend/src/init/: env_variables.py  mongo_session.py  redis_session.py
agent-backend/src/integrations/: facebook_api.py  generate_google_creds.py  google_ads_api.py
agent-backend/src/lang_models/: __init__.py  cohere.py  factory.py
agent-backend/src/messaging/: client.py  send_message_to_socket.py
agent-backend/src/models/: canopy.py  canopy_server.py  config_models.py  mongo.py  sockets.py  vectordatabase.py
agent-backend/src/mongo/: client.py  prepopulate_all.py  prepopulate_default_agents.py  prepopulate_default_teams.py  prepopulate_default_tools.py  queries.py
agent-backend/src/playground/: ag_base.py  langchain_demo.py  llava_demo.py  websurfer_demo.py
agent-backend/src/qdrant/: qdrant_connection.py
agent-backend/src/qdrantClient/: qdrant_connection.py
agent-backend/src/redisClient/: redis_connection.py  utilities.py
agent-backend/src/routes/: __init__.py  api_routes.py
agent-backend/src/storage/: __init__.py  google.py  local.py  provider.py
agent-backend/src/templates/: base.txt
agent-backend/src/test/init/: test_env_variables.py  test_mongo_session.py
agent-backend/src/test/messaging/: test_send_message_to_socket.py
agent-backend/src/test/mongo/: test_client.py
agent-backend/src/test/qdrantClient/: test_qdrant_connection.py
agent-backend/src/tools/: __init__.py  build_request_from_api_spec.py  builtin_tools.py  code_execution_docker_notebook_tool.py  code_execution_tool.py  global_tools.py  google_cloud_function.py  rag_tool.py
agent-backend/src/tools/builtins/: __init__.py  apify_google_search.py  arxiv.py  base.py  duckduckgo.py  firecrawl_loader.py  serper.py  stackexchange.py  wikidata.py  wikipedia.py  youtube.py
agent-backend/src/tools/retrievers/: __init__.py  base.py  callback_handler.py  default.py  factory.py  filters.py  multi_query.py  self_query.py  similarity_search.py  time_weighted.py
agent-backend/src/tools/retrievers/custom/: time_weighted_retriever.py
agent-backend/src/utils/: class_checker.py  dict_utils.py  json_schema_to_pydantic.py  log_exception_context_manager.py  model_helper.py
agent-backend/src/vectorstores/: factory.py
docs/: docusaurus.config.js  package-lock.json  package.json
vector-db-proxy/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  Makefile  README.md
vector-db-proxy/.cargo/: config.toml
vector-db-proxy/src/: main.rs
vector-db-proxy/src/adaptors/: mod.rs
vector-db-proxy/src/adaptors/gcp/: gcs.rs  mod.rs  models.rs  pubsub.rs
vector-db-proxy/src/adaptors/mongo/: client.rs  error.rs  mod.rs  models.rs  queries.rs
vector-db-proxy/src/adaptors/pinecone/: apis.rs  client.rs  helpers.rs  mod.rs
vector-db-proxy/src/adaptors/qdrant/: apis.rs  client.rs  helpers.rs  mod.rs  models.rs  utils.rs  v_trait.rs
vector-db-proxy/src/adaptors/rabbitmq/: client.rs  mod.rs  models.rs
vector-db-proxy/src/data/: chunking.rs  helpers.rs  mod.rs  models.rs  processing_incoming_messages.rs  text_extraction.rs  text_splitting.rs  utils.rs
vector-db-proxy/src/data/unstructuredio/: apis.rs  mod.rs  models.rs
vector-db-proxy/src/embeddings/: helpers.rs  mod.rs  models.rs  utils.rs
vector-db-proxy/src/errors/: types.rs
vector-db-proxy/src/gcp/: gcs.rs  mod.rs  models.rs  pubsub.rs
vector-db-proxy/src/init/: env_variables.rs  mod.rs  models.rs
vector-db-proxy/src/llm/: mod.rs  models.rs  oai_client.rs  utils.rs
vector-db-proxy/src/messages/: mod.rs  models.rs  task_handoff.rs  tasks.rs
vector-db-proxy/src/mongo/: client.rs  mod.rs  models.rs  queries.rs
vector-db-proxy/src/qdrant/: client.rs  helpers.rs  mod.rs  models.rs  scrap.rs  utils.rs
vector-db-proxy/src/queue/: add_tasks_to_queues.rs  mod.rs  queuing.rs
vector-db-proxy/src/rabbitmq/: client.rs  consume.rs  mod.rs  models.rs  publish.rs
vector-db-proxy/src/redis_rs/: client.rs
vector-db-proxy/src/routes/: api_routes.rs  apis.rs  helpers.rs  mod.rs  models.rs
vector-db-proxy/src/utils/: conversions.rs  file_operations.rs  macros.rs  maths.rs  mod.rs  models.rs  webhook.rs
vector-db-proxy/src/vector_databases/: error.rs  helpers.rs  mod.rs  models.rs  utils.rs  vector_database.rs
vector-db-proxy/src/vector_dbs/: mod.rs  models.rs  vector_database.rs
vector-db-proxy/src/vectors/: mod.rs  vector_source.rs
webapp/: .dockerignore  .env.example  .eslintignore  .eslintrc.json  .gitignore  .prettierignore  .prettierrc  Dockerfile  Dockerfile_syncserver  Makefile  README.md  agentcloud-dev.json  components.json  docker-compose.yml  ecosystem.config.js  jest.config.js  next.config.js  openapi-spec.json  package-lock.json  (+6 more)
(+657 files in other folders)
