[tool.poetry]
name = "agent-backend"
version = "0.1.0"
description = ""
authors = ["ragy abraham <ragy@rna.digital>"]
readme = "README.md"
packages = [{ include = "agent-backend" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
autogen = { git = "https://github.com/rnadigital/autogen.git" }
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
openai = "1.3.9"
pre-commit = "3.6.0"
python-dotenv = "^1.0.0"
pytest = "7.4.4"
pymongo = "^4.5.0"
redis = "<5.0.0"
termcolor = "^2.3.0"
python-socketio = "5.10.0"
websocket-client = "^1.6.4"
bullmq = "^1.15.4"
diskcache = "^5.6.3"
sse-starlette = "^1.8.2"
qdrant-client = "1.7.1"
fastembed = "0.1.1"
chromadb = "^0.4.22"
sentence-transformers = "^2.2.2"
pypdf = "^4.0.0"
ipython = "^8.20.0"
replicate = "^0.23.1"

[build-system]
requires = ["poetry-core==1.6.1"]
build-backend = "poetry.core.masonry.api"

