[tool.poetry]
name = "agent-backend"
version = "0.1.0"
description = ""
authors = ["ragy abraham <ragy@rna.digital>"]
readme = "README.md"
packages = [{ include = "agent-backend" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
openai = "^1.3.9"
pre-commit = "3.6.0"
python-dotenv = "^1.0.0"
pytest = ">=8.0.0,<9.0.0"
pymongo = "^4.5.0"
redis = "*"
termcolor = "^2.3.0"
python-socketio = "5.10.0"
bullmq = "*"
diskcache = "^5.6.3"
sse-starlette = "^1.8.2"
chromadb = "^0.4.22"
replicate = "^0.23.1"
crewai = { git = "https://github.com/rnadigital/crewAI.git", branch = "main" }
onnxruntime = "1.17.0"
fastembed = "^0.2.2"
qdrant-client = "^1.8.0"
arxiv = "^2.1.0"


[build-system]
requires = ["poetry-core==1.6.1"]
build-backend = "poetry.core.masonry.api"

