[tool.poetry]
name = "agent-backend"
version = "0.1.0"
description = ""
authors = ["ragy abraham <ragy@rna.digital>"]
readme = "README.md"
packages = [{ include = "agent-backend" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
openai = "^1.3.9"
pre-commit = "3.6.0"
python-dotenv = "^1.0.0"
pytest = ">=8.0.0,<9.0.0"
pymongo = "^4.5.0"
redis = "*"
termcolor = "^2.3.0"
python-socketio = "^5.11.3"
bullmq = "*"
diskcache = "^5.6.3"
sse-starlette = "^1.8.2"
chromadb = "^0.4.22"
replicate = "^0.23.1"
crewai = {git = "https://github.com/rnadigital/crewAI.git", rev = "develop"}
onnxruntime = "1.17.0"
fastembed = "^0.2.2"
qdrant-client = "^1.8.0"
arxiv = "^2.1.0"
lark = "^1.1.9"
wikipedia = "^1.4.0"
mediawikiapi = "^1.2"
wikibase-rest-api-client = "^0.1.3"
duckduckgo-search = "^5.3.0"
stackapi = "^0.3.0"
youtube-search = "^2.1.2"
langchain-google-vertexai = "^1.0.3"
langchain-cohere = "^0.1.9"
langchain-anthropic = "^0.1.20"
google-cloud-logging = "^3.10.0"
langchain-groq = "^0.1.4"
apify-client = "^1.7.0"
langgraph = "^0.2.16"

langchain-ollama = "^0.1.1"
pinecone-client = "^5.0.1"
langchain-google-genai = "^1.0.10"
motor = "^3.5.1"
minio = "^7.2.8"


[build-system]
requires = ["poetry-core==1.6.1"]
build-backend = "poetry.core.masonry.api"

