[package]
name = "vector-db-proxy"
version = "0.2.0"
edition = "2021"
authors = ["ragy abraham"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.3.1"
actix-web-lab = "0.20.1"
anyhow = "1.0.75"
async-stream = "0.3.5"
base64 = "0.22.0"
chrono = "0.4.26"
dotenv = "0.15.0"
env_logger = "0.11.1"
futures = "0.3.28"
llm-chain = "0.13.0"
llm-chain-openai = "0.13.0"
log = "0.4.20"
mongodb = "2.8.2"
num-traits = "0.2.16"
qdrant-client = "^1.8.0"
serde = "1.0.185"
serde_json = "1.0.105"
thiserror = "1.0.47"
tokio = { version = "1.32.0", features = ["rt-multi-thread"] }
tonic = "0.11.0"
secret-vault = { version = "1.9.0", features = ["gcp-secretmanager", "serde"] }
tracing = "0.1.37"
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
wherr = "0.1.6"
once_cell = "1.18.0"
actix-service = "2.0.2"
futures-util = "0.3.28"
url = { version = "2.4.1", features = ["serde"] }
percent-encoding = "2.3.0"
async-openai = "0.20.0"
backoff = { version = "0.4.0", features = ["tokio"] }
amqp_serde = "0.4.0"
amqprs = "1.5.1"
google-cloud-storage = "0.16.0"
pdf-extract = "0.7.4"
lopdf = { version = "0.32.0", default-features = false, features = ["nom_parser"] }
regex = "1.9.5"
ndarray = "0.15.6"
google-cloud-auth = "0.13.0"
dotext = "0.1.1"
bson = "2.9.0"
fastembed = "=2.1.1"
ort = { version = "=2.0.0-rc.0", default-features = false, features = ["cuda", "rocm"] }
csv = "1.3.0"
threadpool = "1.8.1"
reqwest = { version = "0.12.0", features = ["json"] }
redis = { version = "0.25.2", features = ["tokio-comp", "serde", "serde_json", "r2d2"] }
r2d2_redis = "0.14.0"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }

[features]
default = ["cuda_rocm"]
cuda_rocm = [] # This is the default feature set for CUDA and ROCm.
coreml = [] # This feature is to control the inclusion of "coreml".

[target.'cfg(all(target_arch = "aarch64", target_os = "macos"))'.dependencies.ort]
version = "=2.0.0-rc.0"
default-features = false
features = ["cuda", "rocm", "coreml"]

[[bin]]
name = "vector-db-proxy"
path = "src/main.rs"
