[package]
name = "vector-db-proxy"
version = "0.2.0"
edition = "2021"
authors = ["ragy abraham"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.3.1"
actix-web-lab = "0.22.0"
anyhow = "1.0.75"
async-stream = "0.3.5"
base64 = "0.22.0"
chrono = "0.4.26"
dotenv = "0.15.0"
env_logger = "0.11.1"
futures = "0.3.28"
log = "0.4.20"
mongodb = "2.8.2"
qdrant-client = "^1.8.0"
serde = "1.0.185"
serde_json = "1.0.105"
thiserror = "1.0.47"
tokio = { version = "1.32.0", features = ["rt-multi-thread"] }
tracing = "0.1.37"
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
wherr = "0.1.6"
once_cell = "1.18.0"
futures-util = "0.3.28"
async-openai = "0.23.4"
backoff = { version = "0.4.0", features = ["tokio"] }
amqp_serde = "0.4.0"
amqprs = "1.5.1"
google-cloud-storage = "0.20.0"
google-cloud-auth = "0.16.0"
bson = "2.9.0"
fastembed = "=2.1.1"
ort = { version = "=2.0.0-rc.0", default-features = false, features = ["cuda", "rocm"] }
reqwest = { version = "0.12.0", features = ["json", "blocking"] }
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
google-cloud-gax = "0.19.0"
google-cloud-pubsub = { version = "0.29.0", features = ["auth"] }
time = "0.3.36"
pinecone-sdk = "0.1.2"
async-trait = "0.1.80"
prost-types = "0.12"
lazy_static = "1.4.0"
regex = "1.10.4"

[features]
default = ["cuda_rocm"]
cuda_rocm = [] # This is the default feature set for CUDA and ROCm.
coreml = [] # This feature is to control the inclusion of "coreml".

[target.'cfg(all(target_arch = "aarch64", target_os = "macos"))'.dependencies.ort]
version = "=2.0.0-rc.0"
default-features = false
features = ["cuda", "rocm", "coreml"]

[[bin]]
name = "vector-db-proxy"
path = "src/main.rs"
